fixed broken styles component

--- a/src/style/auth/signin.scss
+++ b/src/style/auth/signin.scss
@@ -5,14 +5,12 @@
   //&__page-title {
   //}
 
-  &_form {
+  &__form {
     display: grid;
     grid-template-rows:
-      [email-s] 64px [email-e password-s] 64px [password-end] minmax(
-        20px,
-        289px
-      )
+      [email-s] 64px [email-e password-s] 64px [password-e] minmax(20px, 289px)
       [line-s] 2px [line-e login-s] 38px [login-e];
+
     grid-template-columns: 1fr;
   }
 }
